--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<hr>
 <div class="d-flex flex-wrap">
     <div class="px-4 pt-2 ms-sm-5 ms-lg-0" style="max-width: 500px;">
         <h3>Subscribe</h3>
@@ -15,7 +16,7 @@
     </div>
     <hr>
     <div class="d-flex flex-column flex-sm-row pb-3 px-4 ">
-        <div class="d-flex flex-fill order-2 order-sm-1 justify-content-center justify-content-md-start">
+        <div class="d-flex flex-fill pt-md-2 order-2 order-sm-1 justify-content-center justify-content-md-start">
             <label>powered by <a href="https://kodego.ph/" style="color:#D4ECDD; text-decoration: none;">Kodego.ph</a></label>
         </div>
         <div class="d-flex flex-fill order-1 order-sm-2 justify-content-center">
@@ -26,6 +27,5 @@
             <i class="bi bi-facebook m-2"></i>
             <i class="bi bi-instagram m-2"></i>
         </div>
-        
     </div>
 </div>
