--- a/reserve.html
+++ b/reserve.html
@@ -53,45 +53,53 @@
             </div>
         </div>
     </nav>
+    <div  id="reserve" class="container-fluid px-0 pb-5 w-100">
+        <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="unused_assets/liam2.jpg" alt="">
+        <div id="banner-saying">
+            <div id="absolute">
+                <span><h1>Be <span class="bigus">ONE</span> with the <span class="bigus">CROWD</span></h1></span>
+                <span><h1>Reserve <span class="bigus">NOW</span></h1></span>
+            </div>
+        </div>    
+    </div>
     <main>
         <div class="container-fluid">
-            <div class="container-fluid pb-5 wv-100">
-                <span><h1>Reserve Now!!</h1></span>
-            </div>
+            <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates:</h2></span></div>
             <div class="d-flex flex-column flex-md-row justify-content-center justify-content-sm-around">
                 <div class="d-flex w-sm-100 w-md-50 justify-content-center order-md-2">
                     <img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog">
                 </div>
                 <div class="d-flex justify-content-center w-sm-50 order-md-1">
                     <div>
-                        <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                            <div><h3>3.21</b></h3></div>
+                        <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates:</h2></span></div>
+                        <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
+                            <div><h3 class="datemd">3.21</b></h3></div>
                             <div class="px-md-2 px-lg-5 ">
-                                <div><h4>Edinbro</h4></div>  
+                                <div><h4 class="country">Edinbro</h4></div>  
                                 <div class="smol">O2 Academy Edinburgh</div>
                             </div>
                             <button class="btn btn-dark rounded-0 btn-sales" role="button" href="#">BUY NOW</button>
                         </div>
                         <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                            <div><h3>4.01</h3></div>
+                            <div><h3 class="datemd">4.01</h3></div>
                             <div class="px-md-2 px-lg-5">
-                                <div><h4>Edinburgh, UK</h4></div>  
+                                <div><h4 class="country">Edinburgh, UK</h4></div>  
                                 <div class="smol">O2 Academy Edinburgh</div>
                             </div>
                             <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
                         </div>
                         <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
-                            <div><h3>5.30</h3></div>
+                            <div><h3 class="datemd">5.30</h3></div>
                             <div class="px-md-2 px-lg-5">
-                                <div><h4>Edinburgh, UK</h4></div>  
+                                <div><h4 class="country">Edinburgh, UK</h4></div>  
                                 <div class="smol">O2 Academy Edinburgh</div>
                             </div>
                             <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
                         </div>
                         <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
-                            <div><h3>6.20</h3></div>
+                            <div><h3 class="datemd">6.20</h3></div>
                             <div class="px-md-2 px-lg-5">
-                                <div><h4>Edinburgh, UK</h4></div>  
+                                <div><h4 class="country">Edinburgh, UK</h4></div>  
                                 <div class="smol">O2 Academy Edinburgh</div>
                             </div>
                             <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
@@ -114,6 +122,19 @@
     <script>
         $(document).ready(function(){
             $(".btn-sales").click(function(){
+                var date = $(this).siblings("div").children(".datemd").text();
+                var country = $(this).siblings("div.px-md-2").children("div").children(".country").text();
+                var place = $(this).siblings("div.px-md-2").children("div.smol").text();
+                var band_name = $("#band-sched").attr("band-name")
+                var list = {
+                    band_name:band_name,
+                    date:date,
+                    country:country,
+                    place:place
+                }
+
+                sessionStorage.setItem("info",JSON.stringify(list));
+                
                 window.location.href= "/booking.html";
             });
         });
