--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="pt-2 ps-md-4 showBanner bannerText">
                  <h1>Discover<span> the</span></h1> 
                  <h1>Magic<span> of </span>Music</h1>
-                 <button type="submit" class="btn btn-lg-lg btn-outline-light">See More</button>
+                 <button type="submit" class="btn rounded-0 btn-lg-lg btn-outline-light">See More</button>
              </div>
         </div>
     </div>
@@ -86,18 +86,40 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="p-4 text-justify">
+            <div class="p-4 pb-lg-2 text-justify">
                 <h2>Bands</h2>
             </div> 
-            <div class="col-lg-5 p-4 justify-content-center imageHover"> 
-                <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100 bandsImage" alt="">
-                <h3>Ben & Ben </h3>
+            <div class="col-lg-5 p-4 justify-content-center"> 
+                <img src="assets/BenAndBen.jpg" class="img-fluid w-100 bandsImage" alt="">
+                <h3 class="pt-4">Ben & Ben </h3>
+                <p>With their poignant lyrics, distinctive musicality, and electrifying stage presence, Ben&Ben has won the hearts of many.</p>
                 <div class="progress" style="height: 1px;">
-                    <div class="progress-bar bg-dark" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progressBar"></div>
+                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
             </div>
-            <div class="col-lg-7 p-4">
-                <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" alt="">
+
+            <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4">
+                <img src="assets\sample.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
+                <h3 class="pt-4">IV of Spades</h3>
+                <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
+                <div class="progress" style="height: 1px;">
+                    <div class="progress-bar bg-dark progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+            </div>
+            <div class="col-lg-5 p-4">
+                <img src="assets\silent_sanctuary.jpg" class="img-fluid bandsImage" alt="">
+                <h3>Silent Sanctuary</h3>
+                <div class="progress" style="height: 1px;">
+                    <div class="progress-bar bg-light progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+            </div>
+            <div class="col-lg-7 p-4 justify-content-center"> 
+                <img src="assets/decemberAvenue.jpg" class="img-fluid w-100 bandsImage" alt="">
+                <h3 class="pt-4">IV of Spades </h3>
+                <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
+                <div class="progress" style="height: 1px;">
+                    <div class="progress-bar bg-light progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
             </div>
         </div>
     </div>
@@ -111,14 +133,14 @@
         $('.showBanner').fadeIn(2200);
     });
     $(function(){
-        $('.imageHover').hover(function(){
-                $('.imageHover').css('cursor', 'pointer');
-                $('#progressBar').attr('aria-valuenow','100').css('width','100%');
-                $('.bandsImage').css('object-fit','none');
+        $('.bandsImage').hover(function(){
+                $(this).siblings('.progress').children('.progressBar').attr('aria-valuenow','100').css('width','100%');
+                $(this).css('object-fit','none');
+                $(this).css('cursor', 'pointer');
             },
             function(){
-                $('#progressBar').attr('aria-valuenow','0').css('width','0%');
-                $('.bandsImage').css('object-fit','fill');
+                $('.progressBar').attr('aria-valuenow','0').css('width','0%');
+                $(this).css('object-fit','cover');
         });
     });
     // $(function() {
