--- a/reserve.html
+++ b/reserve.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <div  id="reserve" class="container-fluid px-0 pb-5 w-100">
-        <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="unused_assets/liam2.jpg" alt="">
+        <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets\lukas-bato-C6ni9uAva5I-unsplash.jpg" alt="">
         <div id="banner-saying">
             <div id="absolute">
                 <span><h1>Be <span class="bigus">ONE</span> with the <span class="bigus">CROWD</span></h1></span>
