--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
         <div class="mb-3 justify-content-sm-center">
             <div class="ms-sm-5 ms-lg-0">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email address"><br>
+            <input type="email" class="form-control rounded-0" id="exampleFormControlInput1" placeholder="Your email address"><br>
             <button type="submit" class="btn rounded-0 btn-outline-light">Submit</button>
         </div>
         </div>
