--- a/index.html
+++ b/index.html
@@ -53,20 +53,21 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid p-0 ctnText">
-        <div style="position: relative;">
-            <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" alt="">
-            <div class="pt-2 ps-md-4 showBanner bannerText">
-                 <h1>Discover<span> the</span></h1> 
-                 <h1>Magic<span> of </span>Music</h1>
-                 <button type="submit" class="btn rounded-0 btn-lg-lg btn-outline-light">See More</button>
+    <div class="container-fluid p-0">
+        <div style="position: relative;" class="homeBanner">
+            <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" alt="">
+            <div class="ps-5 showBanner bannerText">
+                <span><h1><span class="bigus">DISCOVER</span> the</span></h1></span>
+                <span><h1><span class="bigus">MAGIC</span><span> of </span><span class="bigus">MUSIC</span></h1></span><br>
+                <button type="submit" class="btn rounded-0 btn-lg-lg btn-outline-light">See More</button>
              </div>
         </div>
     </div>
+<!--Music rotating definition-->
     <div class="container">
         <div class="row">
             <div class="col-lg-5 p-4 ctnText">
-            <h2>Music is</h2>
+            <h2>MUSIC <span>is</span></h2>
                 <div class="d-flex wrapper justify-content-center justify-content-lg-start">
                         <div class="words">
                             <span class="spanAdjectives">Mellow</span>
@@ -76,14 +77,15 @@
                             <span class="spanAdjectives">Raucous</span>
                         </div>
                 </div>
-                <p class="pt-lg-4">A music company called Ampli.fy manages many bands and events, primarily local artists. </p>
-                <button type="submit" class="btn btn-lg-lg btn-outline-light">LEARN MORE</button>
+                <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily local artists. A music company called Ampli.fy manages many bands and events, primarily local artists.</p>
+                <button type="submit" class="btn btn-lg-lg rounded-0 btn-outline-light">LEARN MORE</button>
             </div>
             <div class="col-lg-7 p-4">
                 <img src="assets/banner.jpg" class="img-fluid w-100" alt="">
             </div>
         </div>
     </div>
+<!--Band Details-->
     <div class="container">
         <div class="row">
             <div class="p-4 pb-lg-2 text-justify">
@@ -123,6 +125,75 @@
             </div>
         </div>
     </div>
+    <!--Avail tickets-->
+    <div class="container">
+        <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
+        <div class="d-flex flex-column flex-md-row justify-content-center justify-content-sm-around">
+            <div class="d-flex w-sm-100 w-md-50 justify-content-center order-md-2">
+                <img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog">
+            </div>
+            <div class="d-flex justify-content-center w-sm-50 order-md-1">
+                <div>
+                    <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
+                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
+                        <div><h3 class="datemd">3.21</b></h3></div>
+                        <div class="px-md-2 px-lg-5 ">
+                            <div><h4 class="country">Edinbro</h4></div>  
+                            <div class="smol">O2 Academy Edinburgh</div>
+                        </div>
+                        <button class="btn btn-dark rounded-0 btn-sales" role="button" href="#">BUY NOW</button>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
+                        <div><h3 class="datemd">4.01</h3></div>
+                        <div class="px-md-2 px-lg-5">
+                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div class="smol">O2 Academy Edinburgh</div>
+                        </div>
+                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
+                        <div><h3 class="datemd">5.30</h3></div>
+                        <div class="px-md-2 px-lg-5">
+                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div class="smol">O2 Academy Edinburgh</div>
+                        </div>
+                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
+                        <div><h3 class="datemd">6.20</h3></div>
+                        <div class="px-md-2 px-lg-5">
+                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div class="smol">O2 Academy Edinburgh</div>
+                        </div>
+                        <button class="btn btn-dark rounded-0 btn-sales"> BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Contact information-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 px-1">
+                <img src="../assets/lp4.jpg" class="img-fluid mt-4 pt-3 px-2">
+            </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 sm text-center pt-5">
+          <h1 class="display-1">LET'S <br> CHAT!</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 sm text-center pt-5 ">
+          <h5 style="font-family: arial;" >Got a question, comment or a collaboration idea? Great, let us hear it 
+            – we’re <BR> all about community and two-way communication here at Elisha. </h5>
+        </div>
+    </div>
+    <div class="button pt-5" style="text-align-last:center">
+        <button type="button" class="btn btn-dark text-center rounded-0 btn-lg" href="../html/contact.html">CONTACT</button>
+    </div>
+</div>
+<!--footer-->
     <footer>
         <script>
             $("footer").load("footer.html");
