--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
     <div class="container-fluid p-0">
         <div style="position: relative;" class="homeBanner">
-            <img src="https://images.unsplash.com/photo-1609102026400-3c0ca378e4c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80" class="img-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" alt="">
+            <img src="assets/homebanner.jpg" class="img-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" alt="">
             <div class="ps-5 showBanner bannerText">
                 <span><h1><span class="bigus">DISCOVER</span> the</span></h1></span>
                 <span><h1><span class="bigus">MAGIC</span><span> of </span><span class="bigus">MUSIC</span></h1></span><br>
@@ -64,7 +64,7 @@
         </div>
     </div>
 <!--Music rotating definition-->
-    <div class="container">
+    <div class="container pt-md-4">
         <div class="row">
             <div class="col-lg-5 p-4 ctnText">
             <h2>MUSIC <span>is</span></h2>
@@ -86,10 +86,10 @@
         </div>
     </div>
 <!--Band Details-->
-    <div class="container">
+    <div class="container pt-3">
         <div class="row">
-            <div class="p-4 pb-lg-2 text-justify">
-                <h2>Bands</h2>
+            <div class="p-4 pb-lg-2 d-md-none text-justify ctnText">
+                <h2>BANDS</h2>
             </div> 
             <div class="col-lg-5 p-4 justify-content-center"> 
                 <img src="assets/BenAndBen.jpg" class="img-fluid w-100 bandsImage" alt="">
@@ -100,7 +100,8 @@
                   </div>
             </div>
 
-            <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4">
+            <div class="col-lg-7 pt-lg-5 mt-lg-5 p-4 ctnText">
+                <h2>LOCAL BANDS</h2>
                 <img src="assets\sample.jpg" class="img-fluid pt-lg-5 bandsImage" alt="">
                 <h3 class="pt-4">IV of Spades</h3>
                 <p>A rock group from Metro Manila, the Philippines, is called IV of Spades. The local press has described their music as "pop funk" and "funk rock."</p>
@@ -109,8 +110,9 @@
                   </div>
             </div>
             <div class="col-lg-5 p-4">
-                <img src="assets\silent_sanctuary.jpg" class="img-fluid bandsImage" alt="">
-                <h3>Silent Sanctuary</h3>
+                <img src="assets/decemberAvenue.jpg" class="img-fluid bandsImage" alt="">
+                <h3 class="pt-4">December Avenue</h3>
+                <p>reflects the band's repertoire, which primarily discusses life, love, and moving on "December" is the final month of the year, a gateway to the new year/new life.</p>
                 <div class="progress" style="height: 1px;">
                     <div class="progress-bar bg-light progressBar" role="progressbar" style="width: 0;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
@@ -125,6 +127,18 @@
             </div>
         </div>
     </div>
+    <!--banner-->
+    <div class="container-fluid p-0">
+        <div style="position: relative;" class="homeBanner">
+            <img src="assets/coverbanner.jpg" class="img-fluid w-100" style="min-height: 584px; max-height: 585px;" alt="">
+            <div class="ps-5 showBanner bannerText">
+                <span><h1><span class="bigus">BEN</span><span> & </span><span  class="bigus">BEN</span></h1></span>
+                <span><h1><span class="bigus">Tickets are now Available!</span></h1></span><br>
+                <span style="font-size: 2vw;">2022 &#9679; MARCH-JUNE &#9679; PHILIPPINES</span>
+             </div>
+        </div>
+    </div>
+
     <!--Avail tickets-->
     <div class="container">
         <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates: Ben & Ben</h2></span></div>
@@ -175,7 +189,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 px-1">
-                <img src="../assets/lp4.jpg" class="img-fluid mt-4 pt-3 px-2">
+                <img src="assets/sample.jpg" class="img-fluid mt-4 pt-3 px-2">
             </div>
     </div>
     <div class="row">
