--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -87,59 +88,77 @@
             </div>
             <!--End Divider-->
             <br>
-            <!-- Developer-->
-            <div class=" row mx-auto justify-content-sm-center py-5 " >
-                <div class="col-12 col-sm-12 col-lg-4 text-center" id="aYoung"> 
-                    <img src="assets/d1.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded-0">
-                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"  style="color: white;"><strong>Mendrix</span></strong>
-                        <br><small class="text-muted text-justify text-left px-3" style="color: white;" >Developer</small>
-                            <div class=""style="background-color: white;">
-                                <i href="#" class="bi bi-twitter"></i>
-                                <i class="bi bi-facebook"></i>
-                                <i class="bi bi-instagram"></i>
+            <!--developer-->
+            <div class="container">
+                <div class="section ourTeam">
+                    <header class="text-center">
+                        <h2>Meet <strong>Our Team</strong></h2>
+                    </header>
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-4 col-md-4 i">
+                            <div class="c text-center">
+                                <div class="wrap">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="#" width="270" height="270" class="img-responsive">
+                                    <div class="info">
+                                        <h3 class="name">Mendrix Manlangit</h3>
+                                        <h4 class="position">Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="more">
+                                    <p>Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                    <div class="socials">
+                                        <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                                        <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                        <a href="#" title="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                                        <a href="#" title="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        <div class="  btn mb-3 my-1 btn-lg rounded-0">
-                            <BUTTON id="send">View</BUTTON>
-                            <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-                            <script src=https://cdn.jsdelivr.net/npm/sweetalert2@11.4.33/dist/sweetalert2.all.min.js></script>
                         </div>
+                        <div class="col-xs-6 col-sm-4 col-md-4 i">
+                            <div class="c text-center">
+                                <div class="wrap">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="#" width="270" height="270" class="img-responsive">
+                                    <div class="info">
+                                        <h3 class="name">Lyca Castro</h3>
+                                        <h4 class="position">Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="more">
+                                    <p>Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                    <div class="socials">
+                                        <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                                        <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                        <a href="#" title="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                                        <a href="#" title="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-sm-4 col-md-4 i">
+                            <div class="c text-center">
+                                <div class="wrap">
+                                    <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="#" width="270" height="270" class="img-responsive">
+                                    <div class="info">
+                                        <h3 class="name">John Michael Joaquin</h3>
+                                        <h4 class="position">Developer</h4>
+                                    </div>
+                                </div>
+                                <div class="more">
+                                    <p>Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                    <div class="socials">
+                                        <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                                        <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                                        <a href="#" title="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                                        <a href="#" title="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                
-                <div class="col-md-6 col-sm-12 col-12 col-lg-4 text-center "  id="class2">
-                    <img src="assets/d3.jpg"  class="img-fluid mt-4 pt-3 px-2 rounded">
-                        <span class="display-6 mt-4 col-md-6 sm  text-left px-2"  style="color: white;"><strong>Lyca</span></strong>
-                        <br><small class="text-muted text-justify text-left px-3" style="color: white;" >Developer</small>
-                        <div class=""style="background-color: white;">
-                            <i class="bi bi-twitter"></i></i>
-                            <i class="bi bi-facebook"></i>
-                            <i class="bi bi-instagram"></i>
-                        </div>
-                        <div class="  btn mb-3 my-1 btn-lg rounded-0">
-                            <BUTTON ONCLICK="ShowAndHide2()">View</BUTTON>
-                        </div>
-                        <div ID="SectionName2" STYLE="display:none ">
-                            <span id= "second" style="color: white;">Lyca is</span>
-                        </div>
                 </div>
-                <div class="col-12 col-sm-12 col-lg-4 text-center" id="momsLife">
-                    <img src="assets/d2.jpg" class="img-fluid mt-4 pt-3 px-2 rounded">
-                    <span class="display-6 mt-4 col-md-6 sm  text-left px-2"  style="color: white;"><strong>Mike</span></strong>
-                        <br><small class="text-muted text-justify text-left px-3"  style="color: white;">Developer</small>
-                        <div class="" style="background-color: white;">
-                            <i class="bi bi-twitter"></i>
-                            <i class="bi bi-facebook"></i>
-                            <i class="bi bi-instagram"></i>
-                        </div>
-                        <div class="  btn mb-3 my-1 btn-lg rounded-0">
-                            <BUTTON ONCLICK="ShowAndHide3()">View</BUTTON>
-                        </div>
-                        <div ID="SectionName3" STYLE="display:none ">
-                            <span id="third"style="color: white;">Mike is</span>
-                        </div>
-                </div>
-            </div>
-
-            <!--end dev-->
+                <!--end dev-->
             <!--let's chat-->
             <div class="row py-5 ">
                 <div class="col-12 position-relative">
